# qlit

./: .gitignore  Cargo.toml  DEV.md  README.md  pyproject.toml  qlit.pyi  test_script.py
.github/: dependabot.yml
.github/actions/install-mesa/: action.yml
.github/bench-runner/: Dockerfile
.github/workflows/: Bench-Base.yml  Bench-PR-Close.yml  Bench-PR-Track.yml  Bench-PR.yaml  Bench.yml  CI.yml  Test.yml  codspeed.yml
src/: circuit.rs  clifford_circuit.rs  generator.rs  generator1.rs  generator_col.rs  generator_col1.rs  generator_row.rs  gpu_generator.rs  lib.rs  simulate.rs  tableau.rs  utils.rs
src/gpu_generator/: apply_cnot_gate.wgsl  apply_gates.wgsl  apply_s_gate.wgsl  apply_z_gate.wgsl  collapse.wgsl  elimination_pass.wgsl
tests/: randomized.py  test.py  test.rs
