[package]
name = "qlit"
version = "0.1.0"
edition = "2021"

[features]
gpu = []

[lib]
name = "qlit"
crate-type = ["cdylib", "rlib"]

[dependencies]
num-complex = "0.4.6"
num_cpus = "1.16.0"
pollster = "0.4.0"
pyo3 = { version = "0.23.5", features = ["num-complex"] }
rand = { version = "0.9.0", features = ["small_rng"] }
wgpu = "24.0.1"

[dev-dependencies]
pyo3 = { version = "0.23.5", features = ["auto-initialize"] }
